--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -14,7 +14,7 @@
             text-align: center;
             color: white; /* Change text color for visibility */
         }
-        /* Modal styles */
+        /* Modal styles for losing message */
         .modal {
             display: none; 
             position: fixed; 
@@ -24,7 +24,6 @@
             width: 100%; 
             height: 100%; 
             overflow: auto; 
-            background-color: rgb(0,0,0); 
             background-color: rgba(0,0,0,0.4); 
             padding-top: 100px; 
         }
@@ -67,21 +66,21 @@
     <h6>Version 0.0.1</h6>
     <br><br><br><br>
 
-    <!-- Modal for winning message -->
-    <div id="winModal" class="modal">
-        <div class="modal-content">
-            <h2>You Have Won!</h2>
-            <p>Please click below to proceed to the next page.</p>
-            <button id="nextPage" onclick="goToNextPage()">Next Page</button>
-        </div>
-    </div>
-
     <!-- Modal for losing message -->
     <div id="lossModal" class="modal">
         <div class="modal-content">
             <h2>You Lose</h2>
             <p>Please click below to proceed to the next page.</p>
             <button id="nextPage" onclick="goToNextPage()">Next Page</button>
+        </div>
+    </div>
+
+    <!-- Modal for winning message -->
+    <div id="winModal" class="modal">
+        <div class="modal-content">
+            <h2>You Win!</h2>
+            <p>Please click below to proceed to the next page.</p>
+            <button id="nextPageWin" onclick="goToNextPage()">Next Page</button>
         </div>
     </div>
 
@@ -111,14 +110,14 @@
             return (right1 >= left2 && bottom1 >= top2 && left1 <= right2 && top1 <= bottom2);
         }
 
-        // Function to check for collisions and win/lose conditions
+        // Function to check for collisions and win/lose condition
         function myCheckHit() {
             if (myHitOther('myImg01', 'myImg02')) {
                 showLossModal();
                 document.getElementById('myImg01').style.left = '20px';
             }
             if (myHitOther('myImg01', 'winBox')) {
-                showWinModal(); // Show winning modal instead of alert
+                showWinModal(); // Show winning modal
                 document.getElementById('myImg01').style.left = '20px'; // Optionally reset position
             }
         }
@@ -197,15 +196,15 @@
             }
         });
 
-        // Show the winning modal
-        function showWinModal() {
-            const winModal = document.getElementById('winModal');
-            winModal.style.display = 'block';
-        }
-
         // Show loss modal
         function showLossModal() {
             const modal = document.getElementById('lossModal');
+            modal.style.display = 'block';
+        }
+
+        // Show win modal
+        function showWinModal() {
+            const modal = document.getElementById('winModal');
             modal.style.display = 'block';
         }
 
@@ -216,13 +215,14 @@
 
         // Close modal when clicking outside of it
         window.onclick = function(event) {
-            const winModal = document.getElementById('winModal');
             const lossModal = document.getElementById('lossModal');
-            if (event.target == winModal) {
-                winModal.style.display = "none";
-            }
-            if (event.target == lossModal) {
+            if (event.target === lossModal) {
                 lossModal.style.display = "none";
+            }
+
+            const winModal = document.getElementById('winModal');
+            if (event.target === winModal) {
+                winModal.style.display = "none";
             }
         }
 
