--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -47,16 +47,6 @@
         #nextPage:hover {
             background-color: #45a049; 
         }
-        /* Styles for win area */
-        #winArea {
-            position: absolute;
-            width: 100px;
-            height: 100px;
-            background-color: rgba(0, 255, 0, 0.5); /* green with some transparency */
-            left: calc(100% - 150px); /* 150px from the right edge */
-            top: calc(100% - 150px); /* 150px from the bottom edge */
-            border: 2px solid #0f0;
-        }
     </style>
 </head>
 
@@ -75,21 +65,16 @@
         </div>
     </div>
 
-    <!-- Modal for winning message -->
-    <div id="winModal" class="modal">
-        <div class="modal-content">
-            <h2>You Win!</h2>
-            <p>Please click below to proceed to the next page.</p>
-            <button id="nextPage" onclick="goToNextPage()">Next Page</button>
-        </div>
-    </div>
-
     <script>
         // Global movement flags
         let moveImg1 = { left: false, up: false, right: false, down: false };
 
         // Speed for movement
         const speed = 5;
+        
+        // Background movement variables
+        let moveBackground = false;
+        let myGlobalX = 0;
 
         // Function to check if two elements are colliding
         function myHitOther(my1, my2) {
@@ -106,14 +91,9 @@
 
         // Function to check for collisions
         function myCheckHit() {
-            // Check for loss
             if (myHitOther('myImg01', 'myImg02')) {
                 showLossModal();
-                document.getElementById('myImg01').style.left = '20px';  // Reset Greninja position
-            }
-            // Check for win
-            if (myHitOther('myImg01', 'winArea')) {
-                showWinModal();
+                document.getElementById('myImg01').style.left = '20px';
             }
         }
 
@@ -128,10 +108,31 @@
             if (moveImg1.right) img1.style.left = (parseInt(img1.style.left) + speed) + 'px';
             if (moveImg1.down) img1.style.top = (parseInt(img1.style.top) + speed) + 'px';
 
+            // Calculate distance between img1 and img2
+            const deltaX = parseInt(img1.style.left) - parseInt(img2.style.left);
+            const deltaY = parseInt(img1.style.top) - parseInt(img2.style.top);
+            const distance = Math.sqrt(deltaX * deltaX + deltaY * deltaY);
+
+            // Move myImg02 (Charizard) towards myImg01 (Greninja)
+            if (distance > 0) {
+                // Normalize the direction
+                const moveX = (deltaX / distance) * speed; 
+                const moveY = (deltaY / distance) * speed; 
+                
+                img2.style.left = (parseInt(img2.style.left) + (moveX > 0 ? Math.min(moveX, speed) : Math.max(moveX, -speed))) + 'px';
+                img2.style.top = (parseInt(img2.style.top) + (moveY > 0 ? Math.min(moveY, speed) : Math.max(moveY, -speed))) + 'px';
+            }
+
+            // Move background if the flag is set
+            if (moveBackground) {
+                myGlobalX += 5;  // Move background to the left
+                document.getElementById('myBody').style.backgroundPosition = myGlobalX + 'px 0px';
+            }
+
             myCheckHit(); // Check for collisions
         }
 
-        // Set interval to regularly move images
+        // Set interval to regularly move images and background
         setInterval(moveImages, 100);
 
         // Keydown event listener for movement
@@ -176,12 +177,6 @@
             modal.style.display = 'block';
         }
 
-        // Show win modal
-        function showWinModal() {
-            const modal = document.getElementById('winModal');
-            modal.style.display = 'block';
-        }
-
         // Navigate to the next page
         function goToNextPage() {
             location.href = 't2a13-keydown.html'; // Replace with your next page URL
@@ -189,32 +184,30 @@
 
         // Close modal when clicking outside of it
         window.onclick = function(event) {
-            const lossModal = document.getElementById('lossModal');
-            const winModal = document.getElementById('winModal');
-            if (event.target == lossModal) {
-                lossModal.style.display = "none";
-            }
-            if (event.target == winModal) {
-                winModal.style.display = "none";
+            const modal = document.getElementById('lossModal');
+            if (event.target == modal) {
+                modal.style.display = "none";
             }
         }
 
-        // Initialize position of images and win area on page load
+        // Initialize Charizard's position
         window.onload = function() {
             const img2 = document.getElementById('myImg02');
             img2.style.left = (window.innerWidth - parseInt(img2.style.width) - 50) + 'px'; // start Charizard on the right side of the screen
             img2.style.top = (Math.random() * (window.innerHeight - parseInt(img2.style.height))) + 'px'; // random vertical position
-
-            // Add win area
-            const winArea = document.createElement('div');
-            winArea.id = 'winArea';
-            document.body.appendChild(winArea);
         };
 
     </script>
 
     <img id="myImg01" style="position:absolute; width:100px; height:80px; top:0px; left:50px;" src="https://i.ibb.co/NtcGP2L/greninja.jpg" alt="Greninja">
     <img id="myImg02" style="position:absolute; width:100px; height:80px; top:0px; left:0px;" src="https://i.ibb.co/b612Tcx/charizard.jpg" alt="Charizard">
+
+    <input type="button" id="autoBackgroundButton" value="Start Background Movement" onclick="toggleBackgroundMovement()">
+
+    <input type="button" value="Image Right Fast Button" onTouchStart="{this.click(); event.preventDefault();}" onclick="{
+        document.getElementById('myImg01').style.left = parseInt(document.getElementById('myImg01').style.left) + 10 + 'px';
+        myCheckHit(); // Checks for all collisions
+    }"><br><br>
 
 </body>
 </html>
