--- a/public/index.html
+++ b/public/index.html
@@ -81,6 +81,7 @@ Aden
        <li><a href="t2a20-spy-Aden.html">t2a20-spy-Aden.html</a></li>
         <li><a href="t2a21-canvas-aden.html">t2a21-canvas-aden.html</a></li>
         <li><a href="t2a23-game-template-aden.html">t2a23-game-template-aden.html</a></li>
+        <li><a href="t2a22-local-storage-aden.html">t2a22-local-storage-aden.html</a></li>
     </ul>
 
     <h2>X Assignments</h2>
