--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -6,55 +6,59 @@
     <title>T2A11 Game Template</title>
     <style>
         body {
-            background-repeat: no-repeat; 
-            background-size: cover; 
+            background-repeat: no-repeat;
+            background-size: cover;
             background-image: url('https://i.ibb.co/ggWykJY/cool-desktop-wallpaper-wallpapers-backgrounds-images-art-photos-pictures-free-best-1920x1080-coolwal.jpg');
+            margin: 0;
+            padding: 0;
         }
         h1, h6 {
             text-align: center;
-            color: white; /* Change text color for visibility */
+            color: white;
         }
         /* Modal styles */
         .modal {
-            display: none; 
-            position: fixed; 
-            z-index: 999; 
-            left: 0;
-            top: 0;
-            width: 100%; 
-            height: 100%; 
-            overflow: auto; 
-            background-color: rgb(0,0,0); 
-            background-color: rgba(0,0,0,0.4); 
-            padding-top: 100px; 
+            display: none;
+            position: fixed;
+            z-index: 999;
+            left: 0; top: 0; width: 100%; height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.4);
+            padding-top: 100px;
         }
         .modal-content {
-            background-color: white; 
-            margin: 5% auto; 
-            padding: 20px; 
-            border: 1px solid #888; 
-            width: 80%; 
-            text-align: center; 
+            background-color: white;
+            margin: 5% auto;
+            padding: 20px;
+            border-radius: 5px;
+            width: 80%;
+            text-align: center;
         }
-        #nextPage {
-            background-color: #4CAF50; 
-            color: white; 
-            border: none; 
-            padding: 10px 20px; 
-            cursor: pointer; 
-            font-size: 16px; 
+        button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-size: 16px;
         }
-        #nextPage:hover {
-            background-color: #45a049; 
+        button:hover {
+            background-color: #45a049;
+        }
+        #autoBackgroundButton {
+            margin: 10px;
+        }
+        img {
+            position: absolute;
+            width: 100px;
+            height: 80px;
         }
     </style>
 </head>
-
 <body id="myBody">
 
     <h1>T2A11 Game Template by Fred</h1>
     <h6>Version 0.0.1</h6>
-    <br><br><br><br>
 
     <!-- Modal for losing message -->
     <div id="lossModal" class="modal">
@@ -65,35 +69,34 @@
         </div>
     </div>
 
+    <img id="myImg01" src="https://i.ibb.co/NtcGP2L/greninja.jpg" alt="Greninja" style="top: 0; left: 50px;">
+    <img id="myImg02" src="https://i.ibb.co/b612Tcx/charizard.jpg" alt="Charizard">
+
+    <input type="button" id="autoBackgroundButton" value="Start Background Movement" onclick="toggleBackgroundMovement()">
+    <input type="button" value="Fast Right Move" onclick="fastMoveRight()">
+
     <script>
         // Global movement flags
         let moveImg1 = { left: false, up: false, right: false, down: false };
-
-        // Speed for movement
-        const speed = 5;
-        
-        // Background movement variables
+        const speed = 5; // Speed for movement
         let moveBackground = false;
         let myGlobalX = 0;
 
-        // Function to check if two elements are colliding
-        function myHitOther(my1, my2) {
-            let left1 = parseInt(document.getElementById(my1).style.left);
-            let right1 = left1 + parseInt(document.getElementById(my1).style.width);
-            let top1 = parseInt(document.getElementById(my1).style.top);
-            let bottom1 = top1 + parseInt(document.getElementById(my1).style.height);
-            let left2 = parseInt(document.getElementById(my2).style.left);
-            let right2 = left2 + parseInt(document.getElementById(my2).style.width);
-            let top2 = parseInt(document.getElementById(my2).style.top);
-            let bottom2 = top2 + parseInt(document.getElementById(my2).style.height);
-            return (right1 >= left2 && bottom1 >= top2 && left1 <= right2 && top1 <= bottom2);
+        // Function to check collision between two elements
+        function isColliding(elem1, elem2) {
+            const rect1 = elem1.getBoundingClientRect();
+            const rect2 = elem2.getBoundingClientRect();
+            return !(rect1.right < rect2.left || rect1.left > rect2.right || 
+                     rect1.bottom < rect2.top || rect1.top > rect2.bottom);
         }
 
         // Function to check for collisions
-        function myCheckHit() {
-            if (myHitOther('myImg01', 'myImg02')) {
+        function checkCollisions() {
+            const img1 = document.getElementById('myImg01');
+            const img2 = document.getElementById('myImg02');
+            if (isColliding(img1, img2)) {
                 showLossModal();
-                document.getElementById('myImg01').style.left = '20px';
+                img1.style.left = '50px'; // Reset position after a loss
             }
         }
 
@@ -101,89 +104,64 @@
         function moveImages() {
             const img1 = document.getElementById('myImg01');
             const img2 = document.getElementById('myImg02');
-
-            // Move myImg01 (Greninja) based on flags
             if (moveImg1.left) img1.style.left = (parseInt(img1.style.left) - speed) + 'px';
             if (moveImg1.up) img1.style.top = (parseInt(img1.style.top) - speed) + 'px';
             if (moveImg1.right) img1.style.left = (parseInt(img1.style.left) + speed) + 'px';
             if (moveImg1.down) img1.style.top = (parseInt(img1.style.top) + speed) + 'px';
 
-            // Calculate distance between img1 and img2
+            // Move img2 (Charizard) towards img1 (Greninja)
             const deltaX = parseInt(img1.style.left) - parseInt(img2.style.left);
             const deltaY = parseInt(img1.style.top) - parseInt(img2.style.top);
             const distance = Math.sqrt(deltaX * deltaX + deltaY * deltaY);
-
-            // Move myImg02 (Charizard) towards myImg01 (Greninja)
             if (distance > 0) {
-                // Normalize the direction
-                const moveX = (deltaX / distance) * speed; 
-                const moveY = (deltaY / distance) * speed; 
-                
-                img2.style.left = (parseInt(img2.style.left) + (moveX > 0 ? Math.min(moveX, speed) : Math.max(moveX, -speed))) + 'px';
-                img2.style.top = (parseInt(img2.style.top) + (moveY > 0 ? Math.min(moveY, speed) : Math.max(moveY, -speed))) + 'px';
+                img2.style.left = (parseInt(img2.style.left) + deltaX / distance * speed) + 'px';
+                img2.style.top = (parseInt(img2.style.top) + deltaY / distance * speed) + 'px';
             }
 
-            // Move background if the flag is set
+            // Move background if flag is set
             if (moveBackground) {
-                myGlobalX += 5;  // Move background to the left
+                myGlobalX += 5;
                 document.getElementById('myBody').style.backgroundPosition = myGlobalX + 'px 0px';
             }
 
-            myCheckHit(); // Check for collisions
+            checkCollisions(); // Check for collisions
         }
 
-        // Set interval to regularly move images and background
+        // Set interval for moving images and background
         setInterval(moveImages, 100);
 
         // Keydown event listener for movement
-        document.addEventListener('keydown', function(event) {
+        document.addEventListener('keydown', (event) => {
             switch (event.key) {
-                case 'ArrowLeft':
-                    moveImg1.left = true;
-                    break;
-                case 'ArrowUp':
-                    moveImg1.up = true;
-                    break;
-                case 'ArrowRight':
-                    moveImg1.right = true;
-                    break;
-                case 'ArrowDown':
-                    moveImg1.down = true;
-                    break;
+                case 'ArrowLeft': moveImg1.left = true; break;
+                case 'ArrowUp': moveImg1.up = true; break;
+                case 'ArrowRight': moveImg1.right = true; break;
+                case 'ArrowDown': moveImg1.down = true; break;
             }
         });
 
-        // Keyup event listener to stop movement when key is released
-        document.addEventListener('keyup', function(event) {
+        // Keyup event listener to stop movement
+        document.addEventListener('keyup', (event) => {
             switch (event.key) {
-                case 'ArrowLeft':
-                    moveImg1.left = false;
-                    break;
-                case 'ArrowUp':
-                    moveImg1.up = false;
-                    break;
-                case 'ArrowRight':
-                    moveImg1.right = false;
-                    break;
-                case 'ArrowDown':
-                    moveImg1.down = false;
-                    break;
+                case 'ArrowLeft': moveImg1.left = false; break;
+                case 'ArrowUp': moveImg1.up = false; break;
+                case 'ArrowRight': moveImg1.right = false; break;
+                case 'ArrowDown': moveImg1.down = false; break;
             }
         });
 
         // Show loss modal
         function showLossModal() {
-            const modal = document.getElementById('lossModal');
-            modal.style.display = 'block';
+            document.getElementById('lossModal').style.display = 'block';
         }
 
         // Navigate to the next page
         function goToNextPage() {
-            location.href = 't2a13-keydown.html'; // Replace with your next page URL
+            window.location.href = 't2a13-keydown.html'; // Replace with your next page URL
         }
 
         // Close modal when clicking outside of it
-        window.onclick = function(event) {
+        window.onclick = (event) => {
             const modal = document.getElementById('lossModal');
             if (event.target == modal) {
                 modal.style.display = "none";
@@ -191,23 +169,25 @@
         }
 
         // Initialize Charizard's position
-        window.onload = function() {
+        window.onload = () => {
             const img2 = document.getElementById('myImg02');
-            img2.style.left = (window.innerWidth - parseInt(img2.style.width) - 50) + 'px'; // start Charizard on the right side of the screen
-            img2.style.top = (Math.random() * (window.innerHeight - parseInt(img2.style.height))) + 'px'; // random vertical position
+            img2.style.left = (window.innerWidth - 150) + 'px'; // start on right
+            img2.style.top = (Math.random() * (window.innerHeight - 80)) + 'px'; // random vertical position
         };
 
+        // Fast move right function
+        function fastMoveRight() {
+            const img1 = document.getElementById('myImg01');
+            img1.style.left = (parseInt(img1.style.left) + 20) + 'px'; // Move Right Fast
+            checkCollisions(); // Check for collisions
+        }
+
+        // Toggle background movement function
+        function toggleBackgroundMovement() {
+            moveBackground = !moveBackground;
+            document.getElementById('autoBackgroundButton').value = moveBackground ? "Stop Background Movement" : "Start Background Movement";
+        }
     </script>
-
-    <img id="myImg01" style="position:absolute; width:100px; height:80px; top:0px; left:50px;" src="https://i.ibb.co/NtcGP2L/greninja.jpg" alt="Greninja">
-    <img id="myImg02" style="position:absolute; width:100px; height:80px; top:0px; left:0px;" src="https://i.ibb.co/b612Tcx/charizard.jpg" alt="Charizard">
-
-    <input type="button" id="autoBackgroundButton" value="Start Background Movement" onclick="toggleBackgroundMovement()">
-
-    <input type="button" value="Image Right Fast Button" onTouchStart="{this.click(); event.preventDefault();}" onclick="{
-        document.getElementById('myImg01').style.left = parseInt(document.getElementById('myImg01').style.left) + 10 + 'px';
-        myCheckHit(); // Checks for all collisions
-    }"><br><br>
 
 </body>
 </html>
