--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>T2A11 Game Template</title>
+    <title>T2A23 Game Template</title>
     <style>
         body {
             background-repeat: no-repeat;
@@ -57,7 +57,7 @@
 </head>
 <body id="myBody">
 
-    <h1>T2A11 Game Template by Fred</h1>
+    <h1>T2A23 Game Template by Aden</h1>
     <h6>Version 0.0.1</h6>
 
     <!-- Modal for losing message -->
