--- a/public/Testing-page-random.html
+++ b/public/Testing-page-random.html
@@ -42,12 +42,32 @@
     <script>
         const pieceImages = {
             "black": {
-                "pawn": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUA..."
-                // Replace with base64-encoded images for black pieces
+                "pawn": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUA"
+                    + "AAAAF0EAAABH0EP6AAAAAElFTkSuQmCC",
+                "rook": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUA"
+                    + "AAAAF0EAAABH0EP6AAAAAElFTkSuQmCC",
+                "knight": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUA"
+                    + "AAAAF0EAAABH0EP6AAAAAElFTkSuQmCC",
+                "bishop": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUA"
+                    + "AAAAF0EAAABH0EP6AAAAAElFTkSuQmCC",
+                "queen": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUA"
+                    + "AAAAF0EAAABH0EP6AAAAAElFTkSuQmCC",
+                "king": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUA"
+                    + "AAAAF0EAAABH0EP6AAAAAElFTkSuQmCC"
             },
             "white": {
-                "pawn": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUA..."
-                // Replace with base64-encoded images for white pieces
+                "pawn": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUA"
+                    + "AAAAF0EAAABH0EP6AAAAAElFTkSuQmCC",
+                "rook": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUA"
+                    + "AAAAF0EAAABH0EP6AAAAAElFTkSuQmCC",
+                "knight": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUA"
+                    + "AAAAF0EAAABH0EP6AAAAAElFTkSuQmCC",
+                "bishop": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUA"
+                    + "AAAAF0EAAABH0EP6AAAAAElFTkSuQmCC",
+                "queen": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUA"
+                    + "AAAAF0EAAABH0EP6AAAAAElFTkSuQmCC",
+                "king": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUA"
+                    + "AAAAF0EAAABH0EP6AAAAAElFTkSuQmCC"
             }
         };
 
