--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,7 @@ Aden
         <li><a href="t2a21-canvas-aden.html">t2a21-canvas-aden.html</a></li>
         <li><a href="t2a22-local-storage-aden.html">t2a22-local-storage-aden.html</a></li>
         <li><a href="t2a23-game-template-aden.html">t2a23-game-template-aden.html</a></li>
+         <li><a href="t2a24-browser-hack-aden.html">t2a24-browser-hack-aden.html</a></li>
     </ul>
 
     <h2>X Assignments</h2>
