--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -6,9 +6,9 @@
     <title>T2A11 Game Template</title>
     <style>
         body {
-            background-repeat: no-repeat; 
-            background-size: cover; 
-            background-image: url('https://i.ibb.co/ggWykJY/cool-desktop-wallpaper-wallpapers-backgrounds-images-art-photos-pictures-free-best-1920x1080-coolwal.jpg');
+            background-repeat: repeat; /* Allow background to repeat */
+            background-size: 50px 50px; /* Set the size of each square */
+            background-image: linear-gradient(45deg, red 25%, transparent 25%, transparent 50%, blue 50%, blue 75%, transparent 75%, transparent);
         }
         h1, h6 {
             text-align: center;
