--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -6,9 +6,14 @@
     <title>T2A11 Game Template</title>
     <style>
         body {
-            background-repeat: repeat; /* Allow background to repeat */
-            background-size: 50px 50px; /* Set the size of each square */
-            background-image: linear-gradient(45deg, red 25%, transparent 25%, transparent 50%, blue 50%, blue 75%, transparent 75%, transparent);
+            /* Simple striped background */
+            background: repeating-linear-gradient(
+                to bottom,    /* Change to 'to right' for horizontal stripes */
+                red,          /* Start with red */
+                red 50px,     /* Red will fill the first 50px */
+                blue 50px,    /* Transition to blue */
+                blue 100px    /* Blue will fill the next 50px */
+            );
         }
         h1, h6 {
             text-align: center;
