--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -113,7 +113,7 @@
 
             // Check for collision with myImage4
             if (myHitOther('myImg01', 'myImage4')) {
-                showWinModal();
+                showWinModal();  // Show the win modal when the condition is met
                 document.getElementById('myImg01').style.left = '20px'; // Reset position if needed
             }
         }
